# baccounts

./: .gitignore  Cargo.toml  README.md  SECURITY.md  baccounts.go  baccounts_test.go  crypto.go  crypto_cmd.go  crypto_test.go  go.mod  go.sum  main.go  main_test.go
.github/: dependabot.yml  v2.yml
.github/workflows/: codeql.yml  go.yml  v1.yml  v2.yml
keys/: pubring.gpg  secring.gpg
pkg/: baccounts.go  baccounts_test.go  crypto.go  crypto_test.go  interactive.go  profile.go
src/: baccounts.rs  main.rs
v1/: crypto_cmd.go  go.mod  go.sum  main.go
v1/keys/: random_seed  trustdb.gpg
v1/pkg/: baccounts.go  baccounts_test.go  crypto.go
