[package]
name = "baccounts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = "*"
clap = { version = "*", features=["derive"] }
xdg = "*"
rand = "*"
serde = { version = "*", features=["derive"] }
serde_json = {version = "*"}
arboard = "3"
url = "2.5"