[package]
name = "baccounts"
version = "0.2.0"
edition = "2024"
description = "KISS Password Manager"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = "*"
clap = { version = "4.5", features=["derive"] }
xdg = "3.0"
rand = "*"
serde = { version = "1.0", features=["derive"] }
serde_json = {version = "1.0"}
arboard = "3.5"
url = "2.5"
anyhow = "1.0"
